Fixed the pipeline issue

--- a/.github/workflows/container.yml
+++ b/.github/workflows/container.yml
@@ -13,7 +13,7 @@ on:
       - "packages/container/**"
 
 # run the workflow for default container module.
-default:
+defaults:
   run:
     working-directory: packages/container
 
