--- a/.github/workflows/marketing.yml
+++ b/.github/workflows/marketing.yml
@@ -1,5 +1,5 @@
 # name of workflow
-name: deploy-container
+name: deploy-marketing
 
 # trigger the events.
 on:
@@ -10,12 +10,12 @@ on:
       - main
     # paths when code changes happen in the container module its run.
     paths:
-      - "packages/container/**"
+      - "packages/marketing/**"
 
 # run the workflow for default container module.
 defaults:
   run:
-    working-directory: packages/container
+    working-directory: packages/marketing
 
 # running jobs steps using ubuntu.
 jobs:
@@ -26,17 +26,15 @@ jobs:
       - uses: actions/checkout@v2
       - run: npm install
       - run: npm run build
-        env:
-          PRODUCTION_DOMAIN: ${{ secrets.PRODUCTION_DOMAIN }}
 
       - uses: shinyinc/action-aws-cli@v1.2
-      - run: aws s3 sync dist s3://${{ secrets.AWS_S3_BUCKET_NAME }}/container/latest
+      - run: aws s3 sync dist s3://${{ secrets.AWS_S3_BUCKET_NAME }}/marketing/latest
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           AWS_DEFAULT_REGION: us-east-1
 
-      - run: aws cloudfront create-invalidation --distribution-id ${{ secrets.AWS_DISTRIBUTION_ID }} --paths "/container/latest/index.html"
+      - run: aws cloudfront create-invalidation --distribution-id ${{ secrets.AWS_DISTRIBUTION_ID }} --paths "/marketing/latest/remoteEntry.js"
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
